Refactor to use DocumentTemplate instead of DatabaseManager
This allows using Persistence entities directly instead of creating them from a map at a lower layer.

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <dependencies>
         <dependency>
             <groupId>org.eclipse.jnosql.mapping</groupId>
-            <artifactId>jnosql-mapping-column</artifactId>
+            <artifactId>jnosql-mapping-document</artifactId>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jnosql.databases</groupId>
