--- a/src/test/resources/META-INF/microprofile-config.properties
+++ b/src/test/resources/META-INF/microprofile-config.properties
@@ -12,4 +12,4 @@
 #
 # SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 #
-jnosql.column.database=testPersistenceUnit
+jnosql.persistence.unit=testPersistenceUnit
